infrastructure/argocd/overlays/hetzner/argocd-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
spec:
  ingressClassName: nginx
  rules:
    # Right now, we use port-forwarding for localhost, therefore this should be fine.
    - host: argocd.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
